[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alarmdotcom_ha"
version = "2025.1.0"
description = "Home Assistant custom integration for Alarm.com (uses pyadc)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["alarm.com", "home-assistant", "security", "hacs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyadc>=0.1.0",
    "homeassistant>=2024.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
